syntax = "proto3";

package builder;

// Builder Builds package
service Builder {
	// BuildLatex Takes latex files and returns a reply
	rpc BuildLatex (BuildLatexRequest) returns (FileReply) {}
	rpc Merge (MergeRequest) returns (FileReply) {}
	rpc Health (HealthRequest) returns (HealthReply) {}
}

message BuildLatexRequest {
	repeated File files = 1;
}

message FileReply {
	bytes data = 1;
	bool success = 3;
	string note = 4;
}

message File {
	string name = 1;
	bytes data = 2;
	string folder = 3;
}

message HealthReply {
	bool healthy = 1;
}

message HealthRequest {
}

message MergeRequest {
	repeated File files = 1;
}
